--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,21 @@ dependencies:
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.0
   dio: ^5.4.0
-  retrofit: ^4.0.3
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
   flutter_dotenv: ^5.1.0
   easy_localization: ^3.0.3
   lottie: ^2.7.0
+  flutter_svg: ^2.2.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8
-  retrofit_generator: ^8.0.0
   json_serializable: ^6.7.1
   freezed: ^2.4.6
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
@@ -35,4 +36,5 @@ flutter:
     - assets/animations/
     - assets/translations/
     - assets/env/
+    - assets/json/
     
